--- a/css/style.css
+++ b/css/style.css
@@ -6,12 +6,16 @@
     box-sizing: border-box;
 }
 
+body{
+    overflow-x: hidden;
+}
+
 .grid_wrapper{
     width: 100vw;
     height: 100vh;
     display: grid;   
-    grid-template-columns: 80px 4fr;
-    grid-template-rows: 1fr minmax(400px, 1fr) 1fr;
+    grid-template-columns: 1fr 5fr;
+    grid-template-rows: 100px auto 100px;
     grid-template-areas: 
     "na he"
     "ma ma"
@@ -21,8 +25,8 @@
 
 .inner_grid_index{
     display: grid;
-    grid-template-columns: 185px 185px;
-    grid-template-rows: 250px;
+    grid-template-columns: 175px 175px;
+    grid-template-rows: 300px 300px;
     grid-template-areas:    
     "ny er"
     ;
@@ -30,8 +34,8 @@
 
 .inner_grid_katalog{
     display: grid;
-    grid-template-columns: 450px;
-    grid-template-rows: 160px 160px;
+    grid-template-columns: 1fr;
+    grid-template-rows: 395px 395px;
     grid-template-areas:    
     "va"
     "ko"
@@ -40,8 +44,8 @@
 
 .inner_grid_kundservice{
     display: grid;
-    grid-template-columns: 200px 200px;
-    grid-template-rows: 200px 200px;
+    grid-template-columns: 175px 175px;
+    grid-template-rows: 175px 175px;
     grid-template-areas:    
     "le re"
     "vi ko"
@@ -50,8 +54,8 @@
 
 .nya_produkter{
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 100px;
+    grid-template-columns: 88px 88px;
+    grid-template-rows: 150px 150px;
     grid-template-areas: 
     "bi bi"
     "bi bi";
@@ -59,8 +63,8 @@
 
 .inner_grid_produkter{
     display: grid;
-    grid-template-columns: 480px;
-    grid-template-rows: 120px 120px 120px;
+    grid-template-columns: 1fr;
+    grid-template-rows: 266px 266px 266px;
     grid-template-areas:    
     "p1"
     "p2"
@@ -68,9 +72,10 @@
     ;
 }
 
+
 .ny_produkt_bild{
     grid-area: bi;
-    background-color: red;
+    background-color: white;
     margin: 5px;
 }
 
@@ -108,9 +113,16 @@
 #kok img{
     width: 100%;
     height: 89%;
-    object-fit: contain;
+    object-fit: cover;
     display: block;
     
+}
+
+.inner_grid_produkter section img{
+    display: block;
+    object-fit: cover;
+    width: 100%;
+    height: 89%;
 }
 
 #leverans{
