--- a/css/style.css
+++ b/css/style.css
@@ -222,6 +222,20 @@ p{
     
 }
 
+.produkt_list_item1{
+   display: none;
+}
+
+
+.produkt_list_item2{
+    display: none;
+}
+
+
+.produkt_list_item3{
+    display: none;
+}
+
 /* .produkt_meny{
     grid-area: pm;
     background-color: white;
@@ -310,14 +324,26 @@ p{
     margin-top: 10px;
 }
 
-/* Rounded borders? */
+/* Rounded borders? border-radius*/
+/* Byt font-style */
+#text_box h4{
+    color: white;
+}
+
+/* Ska underline vara svart eller vit */
+#text_box h4:hover{
+    text-decoration: underline;
+    text-decoration-color: black;
+}
+
 #text_box{
-    border: solid 1.5px black;
+    border: solid 1.5px white;
     background-color: rgb(125, 100, 216);
     display: inline-block;
-    border-radius: 10px;
-    padding: 5px;
+    border-radius: 50px;
+    padding: 20px;
     margin: 15px;
+    margin-left: -3px;
 }
 
 #produkt img{
@@ -415,6 +441,22 @@ footer{
 .footer_item:hover{
     text-decoration: underline;
 }
+/* 
+.meny_list{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    background-color: white;
+    position: absolute;
+    left: -90vw;
+    height: 482px;
+    top: 83px;
+    width: 20%;
+    list-style-type: none;
+    transition: all 1s;
+} */
+
 
 .meny_list{
     display: flex;
@@ -433,7 +475,7 @@ footer{
 
 .meny_item{
     text-decoration: none;
-    font-size: 17px;   
+    font-size: 25px;   
     color: black;
 }
 
@@ -445,7 +487,7 @@ footer{
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
-    background-color: rgb(240, 240, 240);
+    background-color: white;
     list-style-type: none;
 }
 
@@ -489,8 +531,20 @@ footer{
     transform: rotate(45deg) translate(-5px, -6px);
 }
 
+/* .navActive{
+    transform: translateX(90vw);
+} */
+
 .navActive{
-    transform: translateX(90vw)
+    transform: translateX(90vw);
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 20px;
+}
+
+.scroll{
+    overflow-y: hidden;
 }
 
 /* Desktopversion */
@@ -537,6 +591,7 @@ footer{
     }
 
     .produkt_list_item1{
+        display: unset;
         grid-area: l1;
         margin: 10px;
         background-color: white;
@@ -544,6 +599,7 @@ footer{
 
     
     .produkt_list_item2{
+        display: unset;
         grid-area: l2;
         margin: 10px;
         background-color: white;
@@ -551,6 +607,7 @@ footer{
 
 
     .produkt_list_item3{
+        display: unset;
         grid-area: l3;
         margin: 10px;
         background-color: white;
